--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "setup": "tsx scripts/setup.ts",
+    "setup:force": "tsx scripts/setup.ts --force",
+    "setup:reset": "tsx scripts/setup.ts --force --reset-vapid",
     "dev": "nodemon --watch src --ext ts,js --exec tsx src/server.ts",
     "build": "tsup src/server.ts --format esm,cjs --out-dir dist --dts",
     "start": "node dist/server.js",
@@ -24,6 +27,10 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.3.0",
+    "@types/web-push": "^3.6.4",
     "nodemon": "^3.0.1",
     "prettier": "^3.6.2",
     "tsup": "^7.1.0",
