--- a/src/admin/package.json
+++ b/src/admin/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
