Fix improperly nested interactive content and add validation
- Fix(client): Remove nested <a> tag inside Link component in Layout.tsx to resolve React nesting warning
- Fix(server): Explicitly define all SQL parameters in schedules.ts to prevent 'Missing named parameter' error
- Feat(server): Add zod validation to POST /api/schedules endpoint to ensure data integrity
- Chore(client): Setup ESLint with eslint-plugin-react and typescript-eslint for better code quality
- Chore: Add zod dependency for runtime validation

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "lucide-preact": "^0.469.0",
@@ -16,6 +17,11 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
     "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "eslint": "^8.57.1",
+    "eslint-config-preact": "^2.0.0",
+    "eslint-plugin-react": "^7.37.5",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vite-plugin-pwa": "^0.21.1"
