--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "playwright": "^1.49.1",
     "sqlite-gui-node": "^1.2.0",
     "web-push": "^3.6.7",
-    "wouter": "^3.3.5"
+    "wouter": "^3.3.5",
+    "zod": "^4.3.5"
   }
 }
