--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^22.10.2",
     "@types/node-cron": "^3.0.11",
     "@types/web-push": "^3.6.4",
+    "@types/ws": "^8.18.1",
     "concurrently": "^9.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
@@ -49,6 +50,7 @@
     "sqlite-gui-node": "^1.2.0",
     "web-push": "^3.6.7",
     "wouter": "^3.3.5",
+    "ws": "^8.19.0",
     "zod": "^4.3.5"
   }
 }
