Make application port configurable and fix production start script
- Made server PORT configurable via .env file (default 3000).
- Updated client Vite config to proxy to the configured PORT.
- Fixed 'npm start' script and 'main' entry to point to correct build output.
- Added .env.example and updated README with configuration instructions.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wapp-flow",
   "version": "1.0.0",
   "description": "WhatsApp Scheduler PWA",
-  "main": "dist/server.js",
+  "main": "dist/src/server.js",
   "workspaces": [
     "client"
   ],
@@ -13,7 +13,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "npm run build --workspace=client",
     "build:server": "tsc -p tsconfig.json",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "format": "prettier --write .",
     "prepare": "husky",
     "lint-staged": "lint-staged"
