chore: add deploy workflow, remove eslint, and sync prettier
- Add .github/workflows/deploy.yml for lint, build, and deploy
- Add .prettierrc with es5 trailing commas and auto-import organization
- Remove ESLint and replace lint script with Prettier + TypeScript type checking
- Update package.json scripts for root-level typecheck
- Reformat codebase to match new Prettier config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
   "editor.formatOnSave": true,
-  "editor.codeActionsOnSave": {
-    "source.organizeImports": "explicit"
-  },
+  "editor.codeActionsOnSave": {},
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
