--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.tsx"
+    "preview": "vite preview"
   },
   "dependencies": {
     "lucide-preact": "^0.469.0",
