--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
     "@types/express": "^5.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.2",
     "@types/node-cron": "^3.0.11",
     "@types/web-push": "^3.6.4",
@@ -49,6 +50,7 @@
     "dayjs": "^1.11.19",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "playwright": "^1.49.1",
     "sqlite-gui-node": "^1.2.0",
