Add migration tests, pre-push hook, and CI workflow
- Add vitest and src/db/migrations.test.ts to test database migrations.

- Update package.json with test script running vitest run.

- Add .husky/pre-push hook to run tests before pushing.

- Update GitHub Actions workflow to run tests on push and PRs.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "test": "vitest run",
     "dev:server": "tsx watch src/server.ts",
     "dev:client": "npm run dev --workspace=client",
     "build": "npm run build:client && npm run build:server",
@@ -42,7 +43,8 @@
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "better-sqlite3": "^11.6.0",
