--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: "22"
           cache: "npm"
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run Lint
         run: npm run lint
 
@@ -31,7 +31,7 @@ jobs:
           node-version: "22"
           cache: "npm"
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run Tests
         run: npm test
 
@@ -46,7 +46,7 @@ jobs:
           node-version: "22"
           cache: "npm"
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run Build
         run: npm run build
 
