--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,13 +78,14 @@ jobs:
       - name: Wait for Deployment
         run: |
           echo "Polling deployment status with live logs..."
-          max_attempts=60  # 5 minutes (60 * 5 seconds)
+          max_attempts=300  # 5 minutes approximate
           attempt=0
           log_index=0
           last_overwritable=""
+          sleep_duration=1
 
           while [ $attempt -lt $max_attempts ]; do
-            sleep 5
+            sleep $sleep_duration
             attempt=$((attempt + 1))
 
             response=$(curl -s "${{ secrets.DEPLOY_URL }}/api/deploy/status?fromLogIndex=$log_index" \
@@ -149,6 +150,9 @@ jobs:
               exit 1
             elif [ "$status" = "unreachable" ]; then
               echo "⚠️ Server unreachable (may be restarting), waiting..."
+              sleep_duration=5
+            else
+              sleep_duration=1
             fi
           done
 
