--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "@types/node-cron": "^3.0.11",
+    "@types/supertest": "^6.0.3",
     "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
     "concurrently": "^9.1.0",
@@ -47,6 +48,7 @@
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.3.0",
+    "supertest": "^7.2.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^4.0.18"
@@ -58,11 +60,11 @@
     "express": "^4.21.2",
     "node-cron": "^3.0.3",
     "playwright": "^1.49.1",
+    "pm2": "^5.3.0",
     "sqlite-gui-node": "^1.2.0",
     "web-push": "^3.6.7",
     "wouter": "^3.3.5",
     "ws": "^8.19.0",
-    "zod": "^4.3.5",
-    "pm2": "^5.3.0"
+    "zod": "^4.3.5"
   }
 }
