feat: Enhance scheduler error handling and test logging
- Treat 'unknown' schedule errors as success to prevent retry loops
- Implement global test log suppression with optional verbose flag via LOGS=true
- Add 'test:logs' script using cross-env for cross-platform verbose testing
- Update GitHub Actions to use verbose test logs
- Add comprehensive test suite for SchedulerService covering error handling and recurrence

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run Tests
-        run: npm test
+        run: npm run test:logs
 
   build:
     needs: [lint, test]
